grammar.js
		program: ($) =>
			seq(
				optional($._statements),
				optional(choice(seq(/__END__/, $.uninterpreted))),
			),

		uninterpreted: (_) => /(.|\s)*/,

		block_body: ($) => $._statements,

		_statements: ($) =>
			choice(
				seq(
					repeat1(choice(seq($._statement, $._terminator), $.empty_statement)),
					optional($._statement),
				),
				$._statement,
			),

		begin_block: ($) => seq("BEGIN", "{", optional($._statements), "}"),
		end_block: ($) => seq("END", "{", optional($._statements), "}"),

		_statement: ($) =>
			choice(
				$.undef,
				$.alias,
				$.if_modifier,
				$.unless_modifier,
				$.while_modifier,
				$.until_modifier,
				$.rescue_modifier,
				$.begin_block,
				$.end_block,
				$._expression,
			),

		method: ($) => seq("def", $._method_rest),

		singleton_method: ($) =>
			seq(
				"def",
				seq(
					choice(
						field("object", $._variable),
						seq("(", field("object", $._arg), ")"),
					),
					choice(".", "::"),
				),
				$._method_rest,
			),

		_method_rest: ($) =>
			seq(
				field("name", $._method_name),
				choice(
					$._body_expr,
					seq(
						field("parameters", alias($.parameters, $.method_parameters)),
						choice(
							seq(
								optional($._terminator),
								optional(field("body", $.body_statement)),
								"end",
							),
							$._body_expr,
						),
					),
					seq(
						optional(
							field(
								"parameters",
								alias($.bare_parameters, $.method_parameters),
							),
						),
						$._terminator,
						optional(field("body", $.body_statement)),
						"end",
					),
				),
			),

		forward_parameter: (_) => "...",

		splat_parameter: ($) =>
			prec.right(-2, seq("*", field("name", optional($.identifier)))),
		hash_splat_parameter: ($) =>
			seq("**", field("name", optional($.identifier))),
		hash_splat_nil: (_) => seq("**", "nil"),
		block_parameter: ($) => seq("&", field("name", optional($.identifier))),
		keyword_parameter: ($) =>
			prec.right(
				PREC.BITWISE_OR + 1,
				seq(
					field("name", identifierOrWhen($)),
					token.immediate(":"),
					field("value", optional($._arg)),
				),
			),
		optional_parameter: ($) =>
			prec(
				PREC.BITWISE_OR + 1,
				seq(field("name", $.identifier), "=", field("value", $._arg)),
			),

		class: ($) =>
			seq(
				"class",
				field("name", choice($.constant, $.scope_resolution)),
				choice(
					seq(field("superclass", $.superclass), $._terminator),
					optional($._terminator),
				),
				optional(field("body", $.body_statement)),
				"end",
			),

		superclass: ($) => seq("<", $._expression),

		singleton_class: ($) =>
			seq(
				"class",
				alias($._singleton_class_left_angle_left_langle, "<<"),
				field("value", $._arg),
				$._terminator,
				optional(field("body", $.body_statement)),
				"end",
			),

		module: ($) =>
			seq(
				"module",
				field("name", choice($.constant, $.scope_resolution)),
				optional($._terminator),
				optional(field("body", $.body_statement)),
				"end",
			),

		rescue_modifier: ($) =>
			prec(
				PREC.RESCUE,
				seq(
					field("body", $._statement),
					"rescue",
					field("handler", $._expression),
				),
			),

		then: ($) =>
			choice(
				seq($._terminator, $._statements),
				seq(optional($._terminator), "then", optional($._statements)),
			),

		ensure: ($) => seq("ensure", optional($._statements)),

		rescue: ($) =>
			seq(
				"rescue",
				field("exceptions", optional($.exceptions)),
				field("variable", optional($.exception_variable)),
				choice($._terminator, field("body", $.then)),
			),

		body_statement: ($) => $._body_statement,

		_body_statement: ($) =>
			choice(
				seq($._statements, repeat(choice($.rescue, $.else, $.ensure))),
				seq(
					optional($._statements),
					repeat1(choice($.rescue, $.else, $.ensure)),
				),
			),

		// 括弧なしのメソッド呼び出し（コマンド呼び出し）は、文のトップレベル、
		// `if` などの後置制御フロー演算子の条件部、`return` の値など
		// 限られた位置でのみ許可される。
		//
		// この区別のため、多くのルールに通常版と "command" 版の 2 種類がある。
		// 通常版は式が有効な場所ならどこでも使えるが、command 版はコマンド呼び出しを
		// 含めるためより限定的な位置でのみ有効。
		//
		// `_expression` は使用箇所が少ないがコマンド呼び出しを含められる。
		// `_arg` はより多くの場所で使えるが、括弧で囲まない限りコマンド呼び出しは
		// 含められない。この命名規則は Ruby の標準文法に準拠している。
		_expression: ($) =>
			choice(
				alias($.command_binary, $.binary),
				alias($.command_unary, $.unary),
				alias($.command_assignment, $.assignment),
				alias($.command_operator_assignment, $.operator_assignment),
				alias($.command_call, $.call),
				alias($.command_call_with_block, $.call),
				prec.left(alias($._chained_command_call, $.call)),
				alias($.return_command, $.return),
				alias($.yield_command, $.yield),
				alias($.break_command, $.break),
				alias($.next_command, $.next),
				$.match_pattern,
				$.test_pattern,
				$._arg,
			),

		_arg: ($) =>
			choice(
				alias($._unary_minus_pow, $.unary),
				$._primary,
				$.assignment,
				$.operator_assignment,
				$.conditional,
				$.range,
				$.binary,
				$.unary,
			),

		_primary: ($) =>
			choice(
				$.parenthesized_statements,
				$._lhs,
				alias($._function_identifier_call, $.call),
				$.call,
				$.array,
				$.string_array,
				$.symbol_array,
				$.hash,
				$.subshell,
				$._literal,
				$.string,
				$.character,
				$.chained_string,
				$.regex,
				$.lambda,
				$.method,
				$.singleton_method,
				$.class,
				$.singleton_class,
				$.module,
				$.begin,
				$.while,
				$.until,
				$.if,
				$.unless,
				$.for,
				$.case,
				$.case_match,
				$.return,
				$.yield,
				$.break,
				$.next,
				$.redo,
				$.retry,
				alias($.parenthesized_unary, $.unary),
				$.heredoc_beginning,
			),

		parenthesized_statements: ($) => seq("(", optional($._statements), ")"),

		scope_resolution: ($) =>
			prec.left(
				PREC.CALL + 1,
				seq(
					choice("::", seq(field("scope", $._primary), token.immediate("::"))),
					field("name", $.constant),
				),
			),

		_call_operator: (_) => choice(".", "&.", token.immediate("::")),
		_call: ($) =>
			prec.left(
				PREC.CALL,
				seq(
					field("receiver", $._primary),
					field("operator", $._call_operator),
					field(
						"method",
						choice(
							identifierOrWhen($),
							$.operator,
							$.constant,
							$._function_identifier,
						),
					),
				),
			),

		call: ($) => {
			const receiver = choice(
				$._call,
				field("method", choice($._variable, $._function_identifier)),
			);

			const args = field("arguments", $.argument_list);
			// `foo.(1)` (= `foo.call(1)`) はメソッド名が無いので、`.` の次に来られるのは
			// 引数リストだけ。**そこには改行を挟める** (`foo.` で行を終えて次行に `(1)`)。
			// 名前つきの `foo.bar (1)` と違って `(` を空白から切り離す必要がないので、
			// `token.immediate` を外した版をこの枝にだけ使う。
			const operatorArgs = field(
				"arguments",
				alias($._spaced_argument_list, $.argument_list),
			);
			const receiverArguments = choice(
				seq(receiver, args),
				seq(
					prec.left(
						PREC.CALL,
						seq(
							field("receiver", $._primary),
							field("operator", $._call_operator),
						),
					),
					operatorArgs,
				),
			);

			const block = field("block", $.block);
			const doBlock = field("block", $.do_block);
			// 引数リストを伴わない `foo { ... }` だけは、ハッシュ引数と
			// 取り違えないよう専用の `{` トークンを使う。
			const commandBlock = field("block", alias($._command_block, $.block));
			return choice(
				receiverArguments,
				prec(PREC.CURLY_BLOCK, seq(receiverArguments, block)),
				prec(PREC.DO_BLOCK, seq(receiverArguments, doBlock)),
				prec(PREC.CURLY_BLOCK, seq(receiver, commandBlock)),
				prec(PREC.DO_BLOCK, seq(receiver, doBlock)),
			);
		},

		argument_list: ($) =>
			prec.right(
				seq(
					token.immediate("("),
					optional($._argument_list_with_trailing_comma),
					")",
				),
			),

		// `.` `&.` `::` の直後に置く引数リスト。`token.immediate` を使わないので
		// **空白と改行を挟める**。`call` の `.()` の枝からだけ参照する。
		_spaced_argument_list: ($) =>
			prec.right(
				seq("(", optional($._argument_list_with_trailing_comma), ")"),
			),

		_argument_list_with_trailing_comma: ($) =>
			prec.right(seq(commaSep1($._argument), optional(","))),

		forward_argument: (_) => "...",
		splat_argument: ($) =>
			prec.right(seq(alias($._splat_star, "*"), optional($._arg))),
		hash_splat_argument: ($) =>
			prec.right(seq(alias($._hash_splat_star_star, "**"), optional($._arg))),
		block_argument: ($) =>
			prec.right(seq(alias($._block_ampersand, "&"), optional($._arg))),

		block: ($) =>
			prec(
				PREC.CURLY_BLOCK,
				seq(
					"{",
					field("parameters", optional($.block_parameters)),
					optional(field("body", $.block_body)),
					"}",
				),
			),

		// 括弧なしのメソッド呼び出しの直後に来る `{` は、Ruby では常にブロック。
		// ハッシュを唯一の引数として渡すには `foo({...})` と括弧が必要で、
		// `foo { k => v }` の `=>` は rightward pattern match になる。
		// この位置の `{` を通常の `{` と字句レベルで区別しないと、
		// `argument_list > hash > pair` として読まれてしまう。
		_command_block: ($) =>
			prec(
				PREC.CURLY_BLOCK,
				seq(
					alias($._command_block_brace, "{"),
					field("parameters", optional($.block_parameters)),
					optional(field("body", $.block_body)),
					"}",
				),
			),

		range: ($) => {
			const begin = field("begin", $._arg);
			const end = field("end", $._arg);
			const operator = field("operator", choice("..", "..."));
			return prec.right(
				PREC.RANGE,
				choice(
					// Ruby は範囲演算子の後の改行を常に継続として扱う (`x = 0..\n10` は
					// `x = (0..10)`)。`_no_line_break` はマッチしないトークンで、この位置で
					// 改行トークンを作らないようスキャナーに伝えるヒントとして置いている。
					seq(
						begin,
						operator,
						choice(seq(optional($._range_operand), optional(end)), $._no_line_break),
					),
					seq(operator, optional($._range_operand), end),
				),
			);
		},

		_function_identifier: ($) =>
			choice(
				alias($.identifier_suffix, $.identifier),
				alias($.constant_suffix, $.constant),
			),
		_variable: ($) =>
			prec.right(
				choice($.self, $.super, $._nonlocal_variable, $.identifier, $.constant),
			),

		operator: (_) =>
			choice(
				"|",
				"^",
				"&",
				"<=>",
				"==",
				"===",
				"=~",
				">",
				">=",
				"<",
				"<=",
				"+",
				"!=",
				"-",
				"*",
				"/",
				"%",
				"!",
				"!~",
				"**",
				"<<",
				">>",
				"~",
				"+@",
				"-@",
				"~@",
				// `!@` は Ruby が受け付けるのに抜けていた (`def !@; end` / `foo.!@ bar`)。
				// 単項演算子のメソッド名は `+@` `-@` `~@` `!@` の 4 つで揃う。
				"!@",
				"[]",
				"[]=",
				"`",
			),

		setter: ($) =>
			seq(field("name", identifierOrWhen($)), token.immediate("=")),

		comment: (_) =>
			token(
				prec(
					PREC.COMMENT,
					choice(
						seq("#", /.*/),
						seq(
							/=begin.*\r?\n/,
							repeat(choice(/[^=]/, /=[^e]/, /=e[^n]/, /=en[^d]/)),
							/[\s*]*=end.*/,
						),
					),
				),
			),

		integer: (_) =>
			/0[bB][01](_?[01])*|0[oO]?[0-7](_?[0-7])*|(0[dD])?\d(_?\d)*|0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
		super: (_) => "super",
		self: (_) => "self",
		nil: (_) => "nil",

		constant: (_) => token(seq(/[A-Z]/, IDENTIFIER_CHARS)),
		identifier: (_) => token(seq(LOWER_ALPHA_CHAR, IDENTIFIER_CHARS)),
		string: ($) =>
			seq(
				alias($._string_start, '"'),
				optional($._literal_contents),
				alias($._string_end, '"'),
			),

		regex: ($) =>
			seq(
				alias($._regex_start, "/"),
				optional($._literal_contents),
				alias($._string_end, "/"),
			),

		_literal_contents: ($) =>
			repeat1(choice($.string_content, $.interpolation, $.escape_sequence)),

		// https://ruby-doc.org/core-2.5.0/doc/syntax/literals_rdoc.html#label-Strings
		pair: ($) =>
			prec.right(
				choice(
					seq(field("key", $._arg), "=>", field("value", $._arg)),
					seq(
						field("key", choice($.string)),
						token.immediate(":"),
						field("value", $._arg),
					),
					seq(
						field(
							"key",
							choice(
								$.hash_key_symbol,
								alias($.identifier, $.hash_key_symbol),
								alias("when", $.hash_key_symbol),
								alias($.constant, $.hash_key_symbol),
								alias($.identifier_suffix, $.hash_key_symbol),
								alias($.constant_suffix, $.hash_key_symbol),
							),
						),
						token.immediate(":"),
						choice(
							field("value", optional($._arg)),
							// この選択肢は実際にはマッチしない（'_no_line_break' トークンは存在しない）。
							// スキャナーにこの位置で改行トークンを生成しないよう示すためのヒント。
							$._no_line_break,
						),
					),
				),
			),

		_terminator: ($) => choice($._line_break, ";"),
	},
});

/**
 * `separator` で区切られたルールの 0 回以上の繰り返しにマッチするルールを生成する
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {ChoiceRule}
 */
function sep(rule, separator) {
	return optional(sep1(rule, separator));
}

/**
 * `separator` で区切られたルールの 1 回以上の繰り返しにマッチするルールを生成する
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
	return seq(rule, repeat(seq(separator, rule)));
}

/**
 * カンマ区切りのルールの 1 回以上の繰り返しにマッチするルールを生成する
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
	return sep1(rule, ",");
}

/**
 * カンマ区切りのルールの 0 回以上の繰り返しにマッチするルールを生成する
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
	return optional(commaSep1(rule));
}

/**
 * Build a name choice without weakening the reserved-word set for its LR state.
 *
 * @param {GrammarSymbols<string>} $
 * @returns {ChoiceRule}
 */
function identifierOrWhen($) {
	return choice($.identifier, alias("when", $.identifier));
}
